tests/unit/default/syntax-error/167-alter-table-dot-name-type-eq.x.t
---- IN ----
*%table.name:int=|
---- OUT ----
---- ERR ----
syntax: expected <value> after `....name:int=` near `|` at position 17 - at line 1
---- EXIT ----
1
